deploy/kubernetes/kubepf.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubepf-client
spec:
  selector:
    matchLabels:
      app: kubepf-client
  template:
    metadata:
      labels:
        app: kubepf-client
    spec:
      containers:
      - name: kubepf
        image: dippynark/kubepf-client
        imagePullPolicy: Always
        command:
        - /usr/bin/client
        - -server
        - kubepf-server
        securityContext:
          privileged: true
        volumeMounts:
        - name: sys-kernel-debug
          mountPath: /sys/kernel/debug
      volumes:
      - name: sys-kernel-debug
        hostPath: 
          path: /sys/kernel/debug
---
apiVersion: v1
kind: Service
metadata:
  name: kubepf-server
spec: 
  selector:
    app: kubepf-server
  ports:
  - name: kubepf
    port: 5050
  - name: web
    port: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubepf-server
spec:
  selector:
    matchLabels:
      app: kubepf-server
  template:
    metadata:
      labels:
        app: kubepf-server
    spec:
      containers:
      - name: kubepf
        image: dippynark/kubepf-server
        imagePullPolicy: Always
        command:
        - /usr/bin/server
        - -data-path
        - /casts
        ports:
        - containerPort: 5050
        volumeMounts:
        - name: data-path
          mountPath: /casts
      - name: kubepf-ui
        image: dippynark/kubepf-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data-path
          mountPath: /usr/share/nginx/html/casts
      volumes:
      - name: data-path
        emptyDir: {}
