deploy/kubernetes/kubecast.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubecast-client
spec:
  selector:
    matchLabels:
      app: kubecast-client
  template:
    metadata:
      labels:
        app: kubecast-client
    spec:
      hostPID: true
      containers:
      - name: kubecast
        image: dippynark/kubecast-client:linux-headers-4.13.0-1008-gcp
        imagePullPolicy: Always
        command:
        - /usr/bin/client
        - -server
        - kubecast-server
        securityContext:
          privileged: true
        volumeMounts:
        - name: sys-kernel-debug
          mountPath: /sys/kernel/debug
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: sys-kernel-debug
        hostPath: 
          path: /sys/kernel/debug
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
---
apiVersion: v1
kind: Service
metadata:
  name: kubecast-server
spec: 
  type: LoadBalancer
  selector:
    app: kubecast-server
  ports:
  - name: kubecast
    port: 5050
  - name: web
    port: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubecast-server
spec:
  selector:
    matchLabels:
      app: kubecast-server
  template:
    metadata:
      labels:
        app: kubecast-server
    spec:
      containers:
      - name: kubecast
        image: dippynark/kubecast-server:linux-headers-4.13.0-1008-gcp
        imagePullPolicy: Always
        command:
        - /usr/bin/server
        - -data-path
        - /casts
        ports:
        - containerPort: 5050
        readinessProbe:
          httpGet:
            path: /
            port: 5050
        volumeMounts:
        - name: data-path
          mountPath: /casts
      - name: kubecast-ui
        image: dippynark/kubecast-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        volumeMounts:
        - name: data-path
          mountPath: /usr/share/nginx/html/casts
      volumes:
      - name: data-path
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubecast
spec:  
  rules:
  - host: cast.lukeaddison.co.uk
    http:
      paths:
      - path: /list
        backend:
          serviceName: kubecast-server
          servicePort: 5050
      - path: /*
        backend:
          serviceName: kubecast-server
          servicePort: 80
